# libft-api

./: Cargo.toml  README.md
libft-api/: Cargo.toml
libft-api-v3/: Cargo.toml
libft-api-v3-pace/: Cargo.toml
libft-api-v3-pace/src/apis/: campus_api.rs  configuration.rs  milestones_api.rs  mod.rs  pace_matrix_api.rs  paces_api.rs  users_api.rs
libft-api-v3-pace/src/models/: campus.rs  http_validation_error.rs  initial_pace_form.rs  milestone.rs  mod.rs  pace.rs  pace_matrix.rs  pace_matrix_cell.rs  pace_matrix_creation.rs  pace_matrix_version.rs  pace_matrix_version_creation.rs  pace_matrix_versioned_cell.rs  pace_speed_up.rs  page_campus_.rs  page_milestone_.rs  page_pace_.rs  page_pace_matrix_version_.rs  page_pace_matrix_versioned_cell_.rs  page_user_.rs  response_activate_user_users__user_id__activate_post.rs  speed_up_body.rs  update_campus.rs  user.rs  user_activation_dry_run_output.rs  user_activation_options.rs  user_milestone_validation.rs  user_profile.rs  validation_error.rs  validation_error_loc_inner.rs
libft-api-v3/src/apis/: campus_api.rs  configuration.rs  freeze_logs_api.rs  freezes_api.rs  me_api.rs  mod.rs  users_api.rs
libft-api-v3/src/models/: bonus_day.rs  bonus_day_create.rs  bonus_day_update.rs  campus.rs  campus_create.rs  campus_custom_message.rs  campus_mail_address_update.rs  campus_student.rs  campus_update.rs  campus_webhook_update.rs  freeze.rs  freeze_bulk_create.rs  freeze_create.rs  freeze_log.rs  freeze_staff_action_description.rs  freeze_student.rs  http_validation_error.rs  mod.rs  page_bonus_day_.rs  page_campus_.rs  page_freeze_.rs  page_freeze_log_.rs  page_freeze_student_.rs  page_user_.rs  user.rs  user_create.rs  user_id.rs  user_student.rs  validation_error.rs  validation_error_loc_inner.rs
libft-api/src/api/: scale_team.rs
libft-api/src/api/scale_team/: scale_teams_id.rs
libft-api/src/api/user/: users_id.rs
libft-api/src/common/: client.rs  paginator.rs  ratelimiter.rs
libft-api/src/models/: achievement.rs
