[workspace]
members = [
    "libft-api", "libft-api-derive", "libft-api-v3", "libft-api-v3-pace"
]
resolver = "2"

[patch.crates-io]
libft-api = { path = "libft-api" }

[workspace.dependencies]
proc-macro2 = { version = "1.0.92", default-features = false }
quote = { version = "1.0.37", default-features = false }
syn = { version = "2.0.90", default-features = false }
