[package]
name = "libft-api"
version = "0.1.0"
edition = "2021"
description="A Rust library for interacting with the 42 API."
readme="README.md"
license-file = "LICENSE"
exclude = ["src/main.rs"]
repository = "https://github.com/hdoo42/libft-api"
categories = ["api-bindings"]

[lib]
path="src/lib.rs"

[[bin]]
name = "piscine_users"
path = "bin/piscine_users.rs"

[[bin]]
name = "users_ext"
path = "bin/users_ext.rs"


[[bin]]
name = "scale_switcher"
path = "bin/scale_switcher.rs"

[[example]]
name = "scroll"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.15.0", features = ["macros"] }
serde_json = { version = "1.0.145", features = ["std"] }
serde_plain = "1.0.2"
reqwest = { version = "0.12.24", features = ["json"] }
rvstruct = "0.3.2"
tokio = { version = "1.47.1", features = ["full", "tracing", "test-util"] }
chrono = { version = "0.4.42", features = ["serde"] }
rsb_derive = "0.5.1"
url = { version = "2.5.7", features = ["serde"] }
futures = { version = "0.3.31", features = ["alloc"] }
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
libft-api-derive = {path = "../libft-api-derive"}
clap = { version = "4.5.23", features = ["derive"] }
